fixed font size too small on edge

--- a/src/assets/sass/layout.scss
+++ b/src/assets/sass/layout.scss
@@ -1,4 +1,6 @@
 html {
+  font-size: 16px;
+  
   @media (-webkit-min-device-pixel-ratio: 2) {
     font-size: 14px;
   }
